--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Docker Build and push
         run: |
-          chmod +x .ci/build-publish.sh
+          chmod +x ci/build-publish.sh
           USERNAME=ion21 \
           REPO=nserver-service \
           TAG=${{ env.BUILD_NUMBER }} \
-          .ci/build-publish.sh 
+          ci/build-publish.sh ci
