--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Set build number
         id: build-number
-        run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GITHUB_ENV
+        run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GIlsTHUB_ENV
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -28,6 +28,7 @@ jobs:
 
       - name: Docker Build and push
         run: |
+          git update-index --chmod=+x mvnw
           chmod +x ci/build-publish.sh
           USERNAME=ion21 \
           REPO=server-service \
