--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,14 @@ jobs:
           repository: 'nimigeanconstantinion/docker-compose-microservices'
           token: ${{ secrets.DEPLOY_ACCESS_TOKEN }}
           path: 'docker-compose-microservices'
+
+      - name: Update and commit app version in docker-compose.yml in other repository
+        run: |
+            cd docker-compose-microservices/
+            echo -e "Current ./docker-compose.yaml\n$(cat docker-compose.yaml)"
+            sed -i -E 's_(ion21/nserver-service:)([^"]*)\1'${{ env.BUILD_NUMBER }}'' docker-compose.yaml
+            echo -e "Updated ./docker-compose.yaml\n$(cat docker-compose.yaml)"
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add .
+            git commit -m "new app version: ${{ env.BUILD_NUMBER }}"
