--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,8 @@ jobs:
         run: |
             cd docker-compose-microservices/
             echo -e "Current ./docker-compose.yaml\n$(cat docker-compose.yaml)"
-            sed -i -E 's_(ion21/nserver-service:)([^"]*)\1'${{ env.BUILD_NUMBER }}'' docker-compose.yaml
+            sed -i -E "s_(ion21/nserver-service:)[^\"]*\1${{ env.BUILD_NUMBER }}" docker-compose.yaml
+#            sed -i -E 's_(ion21/nserver-service:)([^"]*)\1'${{ env.BUILD_NUMBER }}'' docker-compose.yaml
             echo -e "Updated ./docker-compose.yaml\n$(cat docker-compose.yaml)"
             git config user.name github-actions
             git config user.email github-actions@github.com
