first commit cu eureka

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -11,7 +11,11 @@ spring:
       hibernate-dialect: org.hibernate.dialect.MySQLDialect
       hibernate.format_sql: true
     show-sql: true
-
+  cloud:
+    eureka:
+      client:
+        serviceUrl:
+          defaultZone: http://discovery-service:8761/eureka
 
 #
 #server:
