--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,11 @@
 spring:
+  application:
+    name: server-service
+  cloud:
+    eureka:
+      client:
+        serviceUrl:
+          defaultZone: http://localhost:8761/eureka
 #  datasource:
 #    url: jdbc:mysql://localhost:3306/micro_db?createDatabaseIfNotExist=true
 #    username: root
