modificat dependenta eureka

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,8 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<version>4.1.1</version>
 		</dependency>
 	</dependencies>
 
