--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -1,4 +1,9 @@
 spring:
+  cloud:
+    eureka:
+      client:
+        serviceUrl:
+          defaultZone: http://discovery-service:8761/eureka
 
   datasource:
     url: jdbc:mysql://mysql:3306/micro_db?createDatabaseIfNotExist=true
