--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -6,7 +6,7 @@ spring:
           defaultZone: http://discovery-service:8761/eureka
         fetch-registry: true
         register-with-eureka: true
-        enabled: false
+        enabled: true
 
 
   datasource:
