--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,6 +7,8 @@ spring:
         serviceUrl:
           defaultZone: http://localhost:8761/eureka
 
+  zipkin:
+    base-url: http://localhost:9411
 
 #  datasource:
 #    url: jdbc:mysql://localhost:3306/micro_db?createDatabaseIfNotExist=true
@@ -64,6 +66,12 @@ springdoc:
 
         # Test Title
           ljlljl
+
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
 
 
 param:
