--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,12 @@ spring:
       hibernate.format_sql: true
 
     show-sql: true
+  zipkin:
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
+
 server:
   error:
     include-binding-errors: always
