--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,6 +4,8 @@ spring:
 
   zipkin:
     base-url: http://localhost:9411/
+    collector:
+      host: localhost
   sleuth:
     sampler:
       probability: 1.0
