--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
     show-sql: true
   zipkin:
     base-url: http://localhost:9411/
+    collector:
+      host: localhost
   sleuth:
     sampler:
       probability: 1.0
