--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -36,7 +36,8 @@ micrometer:
   export:
     zipkin:
       flush-interval: 500
-      endpoint: http://zipkin:9411/
+      endpoint: http://zipkin:9411/api/v2/spans
+
 
 
 
