--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,13 +12,12 @@ spring:
 
     show-sql: true
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: http://zipkin:9411/
     collector:
-      host: localhost
+      host: zipkin
   sleuth:
     sampler:
       probability: 1.0
-
 server:
   error:
     include-binding-errors: always
@@ -36,12 +35,10 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
-
 logging:
   level:
     org.springframework.web.cors: DEBUG
     org.springframework.cloud.gateway: DEBUG
-
 metrics:
   distribution:
     percentiles-histogram:
