--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,9 +12,9 @@ spring:
 
     show-sql: true
   zipkin:
-    base-url: http://zipkin:9411/
+    base-url: http://localhost:9411/
     collector:
-      host: zipkin
+      host: localhost
   sleuth:
     sampler:
       probability: 1.0
@@ -45,3 +45,11 @@ metrics:
       http:
         server:
           requests: true
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
