--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
 <!--			<version>3.1.3</version>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-micrometer</artifactId>
+			<version>13.3</version>
+		</dependency>
+
 
 	</dependencies>
 
