--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -52,6 +52,11 @@ param:
 logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+  level:
+    root: debug
+  file:
+    name: nserver.log
+
 metrics:
   distribution:
     percentiles-histogram:
@@ -66,3 +71,9 @@ management:
   zipkin:
     tracing:
       endpoint: http://localhost:9411/api/v2/spans
+#
+#logging:
+#  level:
+#    root: debug
+#  file:
+#    name: server.log
