--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -59,12 +59,19 @@ param:
 logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+  level:
+    root: debug
+  file:
+    name: nserver-service.log
+
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-service:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+
 metrics:
   distribution:
     percentiles-histogram:
