cu variabila de cors_allowed

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -78,3 +78,5 @@ management:
 #    root: debug
 #  file:
 #    name: server.log
+cors:
+  allowed-origin: ${ADDITIONAL_CORS_ORIGIN:http://localhost:5000,http://localhost:3000}
