--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 			<version>8.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
