--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,10 +60,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: health, info, prometheus
   endpoint:
     health:
       show-details: always
+    prometheus:
+      enabled: true
+
 
 logging:
   pattern:
