modif. application-docker

--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -13,6 +13,12 @@ spring:
       hibernate.format_sql: true
     show-sql: true
 
+  rabbitmq:
+    port: 5672
+    username: guest
+    password: guest
+    host: rabbitmq
+
   zipkin:
     base-url: http://zipkin:9411/
     collector:
