--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,21 +13,21 @@ spring:
 
     show-sql: true
 
-#  zipkin:
-#    base-url: http://localhost:9411/
-#    collector:
-#      host: localhost
-#
-#  sleuth:
-#    sampler:
-#      probability: 1.0
-#
-#  rabbitmq:
-#    host: localhost
-#    port: 5672
-#    username: guest
-#    password: guest
-#
+  zipkin:
+    base-url: http://localhost:9411/
+    collector:
+      host: localhost
+
+  sleuth:
+    sampler:
+      probability: 1.0
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 server:
   error:
     include-binding-errors: always
@@ -77,47 +77,47 @@ param:
   command-service: localhost
   query-service: localhost
 
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka
-#    fetch-registry: true
-#    register-with-eureka: true
-#
-#metrics:
-#  distribution:
-#    percentiles-histogram:
-#      http:
-#        server:
-#          requests: true
-#
-#management:
-#  tracing:
-#    sampling:
-#      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
-#
-#  zipkin:
-#    tracing:
-#      endpoint: http://localhost:9411/api/v2/spans
-#  endpoints:
-#    web:
-#      exposure:
-#        include: health, info, prometheus
-#  endpoint:
-#    health:
-#      show-details: always
-#    prometheus:
-#      enabled: true
-#
-#
-#logging:
-#  pattern:
-#    level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
-#  level:
-#    root: debug
-#  file:
-#    name: nserver-service.log
-#
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+
+metrics:
+  distribution:
+    percentiles-histogram:
+      http:
+        server:
+          requests: true
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
+
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
+  endpoint:
+    health:
+      show-details: always
+    prometheus:
+      enabled: true
+
+
+logging:
+  pattern:
+    level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+  level:
+    root: debug
+  file:
+    name: nserver-service.log
+
 cors:
   allowed-origin: ${ADDITIONAL_CORS_ORIGIN:http://localhost:5000,http://localhost:3000,http://react-app.local,http://gateway:5000.http://gateway:3000}
 
